<resources>
    <string name="app_name">SubmissionStoryApp2</string>
    <string name="login">Login</string>
    <string name="dummy_name">username</string>
    <string name="hai">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_register">or <font color="#818cf8">Register</font></string>
    <string name="register_failed">Register Failed, Please Try Again..</string>
    <string name="register_success">Register Success, Please Login..</string>
    <string name="upload">Upload</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="create_account">Create an Account</string>
    <string name="register">Register</string>
    <string name="or_login">or <font color="#818cf8">Login</font></string>

    <string name="password_minimum_character">Password must be at least 8 characters</string>

    <string name="login_failed">Login Failed, Please Try Again..</string>

    <string name="please_choose_image">Please choose an image file first.</string>
    <string name="add_story_success">Success add story!</string>
    <string name="cant_get_permission">Did not get permissions.</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="username">username</string>

    <string name="image_capture_desc">Image Capture Description</string>
    <string name="image_switch_desc">Image Switcch Description</string>
    <string name="image_detail_desc">Image Detail Desccription</string>
    <string name="retry">RETRY</string>


    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>
</resources>