<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/tv_create_account"
        style="@style/bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_40"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nikolaswidad.storyappsnew.ui.utils.EditText
        android:id="@+id/ed_register_name"
        style="@style/light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="@dimen/spacing_8"
        android:hint="@string/name"
        android:padding="15dp"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_account"
        app:layout_constraintVertical_bias="0.3" />

    <com.nikolaswidad.storyappsnew.ui.utils.EditText
        android:id="@+id/ed_register_email"
        style="@style/light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        android:drawableStart="@drawable/ic_message"
        android:drawablePadding="@dimen/spacing_8"
        android:hint="@string/email"
        android:padding="15dp"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        app:layout_constraintVertical_bias="0.05" />

    <com.nikolaswidad.storyappsnew.ui.utils.EditText
        android:id="@+id/ed_register_password"
        style="@style/light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_password"
        android:drawablePadding="@dimen/spacing_8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        app:layout_constraintVertical_bias="0.05" />

    <com.nikolaswidad.storyappsnew.ui.utils.ProgressButton
        android:id="@+id/btn_register"
        style="@style/Widget.ProgressButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
        app:layout_constraintVertical_bias="0.347"
        app:text="@string/register"
        app:textAllCaps="false" />


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>