<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginBottom="8dp"
        android:padding="40sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/il_logo" />

    <com.nikolaswidad.storyappsnew.ui.utils.EditText
        android:id="@+id/ed_login_email"
        style="@style/light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        android:drawableStart="@drawable/ic_message"
        android:drawablePadding="@dimen/spacing_8"
        android:hint="@string/email"
        android:padding="15dp"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_logo" />

    <com.nikolaswidad.storyappsnew.ui.utils.EditText
        android:id="@+id/ed_login_password"
        style="@style/light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_password"
        android:drawablePadding="@dimen/spacing_8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
        app:layout_constraintVertical_bias="0" />

    <com.nikolaswidad.storyappsnew.ui.utils.ProgressButton
        android:id="@+id/btn_login"
        style="@style/Widget.ProgressButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
        app:layout_constraintVertical_bias="0.216"
        app:text="@string/login">

    </com.nikolaswidad.storyappsnew.ui.utils.ProgressButton>

    <TextView
        android:id="@+id/tv_register"
        style="@style/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or_register"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.09" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>